Translation methods/lab-4/lab4/gen/SyntaxParser.java
// Generated from /Users/ppv-vldmr/Desktop/MT/lab4 2/lab4/src/main/antlr/Syntax.g4 by ANTLR 4.9.2


    import java.util.*;
	import java.util.stream.Collectors;
    import lab4.primarygrammar.*;
    import lab4.primarylex.*;
    import static lab4.primarygrammar.Util.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SyntaxParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		RETURNS=1, GRAMMAR=2, JAVA_CODE_BRACES=3, JAVA_CODE_BRACKETS=4, REGEX=5, 
		LBRACKET=6, RBRACKET=7, LBRACE=8, RBRACE=9, LPAREN=10, RPAREN=11, SEMICOLON=12, 
		COLON=13, COMMA=14, PIPE=15, QUESTION=16, STAR=17, PLUS=18, APPEND=19, 
		HEADER=20, MEMBERS=21, ARROW=22, SKIP_WORD=23, RULE_NAME=24, TOKEN_NAME=25, 
		WS=26;
	public static final int
		RULE_grammarFile = 0, RULE_headers = 1, RULE_members = 2, RULE_grammarPrelude = 3, 
		RULE_name = 4, RULE_rules = 5, RULE_singleRule = 6, RULE_singleLexerRule = 7, 
		RULE_singleParserRule = 8, RULE_ruleArgs = 9, RULE_ruleReturns = 10, RULE_codeBlock = 11, 
		RULE_alternatives = 12, RULE_alternative = 13, RULE_elemAlts = 14, RULE_element = 15, 
		RULE_notLabeledElement = 16, RULE_elemModifier = 17, RULE_labeledElement = 18, 
		RULE_terminal = 19, RULE_ruleUsage = 20;
	private static String[] makeRuleNames() {
		return new String[] {
			"grammarFile", "headers", "members", "grammarPrelude", "name", "rules", 
			"singleRule", "singleLexerRule", "singleParserRule", "ruleArgs", "ruleReturns", 
			"codeBlock", "alternatives", "alternative", "elemAlts", "element", "notLabeledElement", 
			"elemModifier", "labeledElement", "terminal", "ruleUsage"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'returns'", "'grammar'", null, null, null, "'['", "']'", "'{'", 
			"'}'", "'('", "')'", "';'", "':'", "','", "'|'", "'?'", "'*'", "'+'", 
			"'+='", "'@header'", "'@members'", "'->'", "'skip'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "RETURNS", "GRAMMAR", "JAVA_CODE_BRACES", "JAVA_CODE_BRACKETS", 
			"REGEX", "LBRACKET", "RBRACKET", "LBRACE", "RBRACE", "LPAREN", "RPAREN", 
			"SEMICOLON", "COLON", "COMMA", "PIPE", "QUESTION", "STAR", "PLUS", "APPEND", 
			"HEADER", "MEMBERS", "ARROW", "SKIP_WORD", "RULE_NAME", "TOKEN_NAME", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Syntax.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SyntaxParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class GrammarFileContext extends ParserRuleContext {
		public PrimaryGrammar grammar;
		public GrammarPreludeContext grammarPrelude;
		public HeadersContext headers;
		public List<HeadersContext> hdrs = new ArrayList<HeadersContext>();
		public MembersContext members;
		public List<MembersContext> mmbrs = new ArrayList<MembersContext>();
		public RulesContext rules;
		public GrammarPreludeContext grammarPrelude() {
			return getRuleContext(GrammarPreludeContext.class,0);
		}
		public RulesContext rules() {
			return getRuleContext(RulesContext.class,0);
		}
		public TerminalNode EOF() { return getToken(SyntaxParser.EOF, 0); }
		public List<HeadersContext> headers() {
			return getRuleContexts(HeadersContext.class);
		}
		public HeadersContext headers(int i) {
			return getRuleContext(HeadersContext.class,i);
		}
		public List<MembersContext> members() {
			return getRuleContexts(MembersContext.class);
		}
		public MembersContext members(int i) {
			return getRuleContext(MembersContext.class,i);
		}
		public GrammarFileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_grammarFile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SyntaxListener ) ((SyntaxListener)listener).enterGrammarFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SyntaxListener ) ((SyntaxListener)listener).exitGrammarFile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SyntaxVisitor ) return ((SyntaxVisitor<? extends T>)visitor).visitGrammarFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GrammarFileContext grammarFile() throws RecognitionException {
		GrammarFileContext _localctx = new GrammarFileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_grammarFile);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			((GrammarFileContext)_localctx).grammarPrelude = grammarPrelude();
			setState(46);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==HEADER) {
				{
				{
				setState(43);
				((GrammarFileContext)_localctx).headers = headers();
				((GrammarFileContext)_localctx).hdrs.add(((GrammarFileContext)_localctx).headers);
				}
				}
				setState(48);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(52);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==MEMBERS) {
				{
				{
				setState(49);
				((GrammarFileContext)_localctx).members = members();
				((GrammarFileContext)_localctx).mmbrs.add(((GrammarFileContext)_localctx).members);
				}
				}
				setState(54);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(55);
			((GrammarFileContext)_localctx).rules = rules();
			setState(56);
			match(EOF);

			    ((GrammarFileContext)_localctx).grammar =  new PrimaryGrammar(
			        ((GrammarFileContext)_localctx).grammarPrelude.grammarName,
			        ((GrammarFileContext)_localctx).hdrs.stream().map(x -> getJava(x.content)).collect(Collectors.joining("\n")),
			        ((GrammarFileContext)_localctx).mmbrs.stream().map(x -> getJava(x.content)).collect(Collectors.joining("\n")),
			        ((GrammarFileContext)_localctx).rules.primaryTokens,
			        ((GrammarFileContext)_localctx).rules.primaryRules
			    );

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HeadersContext extends ParserRuleContext {
		public String content;
		public TerminalNode HEADER() { return getToken(SyntaxParser.HEADER, 0); }
		public TerminalNode JAVA_CODE_BRACES() { return getToken(SyntaxParser.JAVA_CODE_BRACES, 0); }
		public HeadersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_headers; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SyntaxListener ) ((SyntaxListener)listener).enterHeaders(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SyntaxListener ) ((SyntaxListener)listener).exitHeaders(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SyntaxVisitor ) return ((SyntaxVisitor<? extends T>)visitor).visitHeaders(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HeadersContext headers() throws RecognitionException {
		HeadersContext _localctx = new HeadersContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_headers);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			match(HEADER);
			setState(60);
			match(JAVA_CODE_BRACES);

			    ((HeadersContext)_localctx).content =  _localctx.getChild(1).getText();

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MembersContext extends ParserRuleContext {
		public String content;
		public TerminalNode MEMBERS() { return getToken(SyntaxParser.MEMBERS, 0); }
		public TerminalNode JAVA_CODE_BRACES() { return getToken(SyntaxParser.JAVA_CODE_BRACES, 0); }
		public MembersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_members; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SyntaxListener ) ((SyntaxListener)listener).enterMembers(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SyntaxListener ) ((SyntaxListener)listener).exitMembers(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SyntaxVisitor ) return ((SyntaxVisitor<? extends T>)visitor).visitMembers(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MembersContext members() throws RecognitionException {
		MembersContext _localctx = new MembersContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_members);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			match(MEMBERS);
			setState(64);
			match(JAVA_CODE_BRACES);

			    ((MembersContext)_localctx).content =  _localctx.getChild(1).getText();

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GrammarPreludeContext extends ParserRuleContext {
		public String grammarName;
		public NameContext name;
		public TerminalNode GRAMMAR() { return getToken(SyntaxParser.GRAMMAR, 0); }
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(SyntaxParser.SEMICOLON, 0); }
		public GrammarPreludeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_grammarPrelude; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SyntaxListener ) ((SyntaxListener)listener).enterGrammarPrelude(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SyntaxListener ) ((SyntaxListener)listener).exitGrammarPrelude(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SyntaxVisitor ) return ((SyntaxVisitor<? extends T>)visitor).visitGrammarPrelude(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GrammarPreludeContext grammarPrelude() throws RecognitionException {
		GrammarPreludeContext _localctx = new GrammarPreludeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_grammarPrelude);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			match(GRAMMAR);
			setState(68);
			((GrammarPreludeContext)_localctx).name = name();
			setState(69);
			match(SEMICOLON);

			    ((GrammarPreludeContext)_localctx).grammarName =  ((GrammarPreludeContext)_localctx).name.content;

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NameContext extends ParserRuleContext {
		public String content;
		public TerminalNode RULE_NAME() { return getToken(SyntaxParser.RULE_NAME, 0); }
		public TerminalNode TOKEN_NAME() { return getToken(SyntaxParser.TOKEN_NAME, 0); }
		public NameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SyntaxListener ) ((SyntaxListener)listener).enterName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SyntaxListener ) ((SyntaxListener)listener).exitName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SyntaxVisitor ) return ((SyntaxVisitor<? extends T>)visitor).visitName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NameContext name() throws RecognitionException {
		NameContext _localctx = new NameContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_name);
		try {
			setState(76);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case RULE_NAME:
				enterOuterAlt(_localctx, 1);
				{
				setState(72);
				match(RULE_NAME);
				((NameContext)_localctx).content =  _localctx.getChild(0).getText();
				}
				break;
			case TOKEN_NAME:
				enterOuterAlt(_localctx, 2);
				{
				setState(74);
				match(TOKEN_NAME);
				((NameContext)_localctx).content =  _localctx.getChild(0).getText();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RulesContext extends ParserRuleContext {
		public List<PrimaryToken> primaryTokens;
		public List<PrimaryRule> primaryRules;
		public SingleRuleContext singleRule;
		public List<SingleRuleContext> rls = new ArrayList<SingleRuleContext>();
		public List<SingleRuleContext> singleRule() {
			return getRuleContexts(SingleRuleContext.class);
		}
		public SingleRuleContext singleRule(int i) {
			return getRuleContext(SingleRuleContext.class,i);
		}
		public RulesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rules; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SyntaxListener ) ((SyntaxListener)listener).enterRules(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SyntaxListener ) ((SyntaxListener)listener).exitRules(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SyntaxVisitor ) return ((SyntaxVisitor<? extends T>)visitor).visitRules(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RulesContext rules() throws RecognitionException {
		RulesContext _localctx = new RulesContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_rules);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==RULE_NAME || _la==TOKEN_NAME) {
				{
				{
				setState(78);
				((RulesContext)_localctx).singleRule = singleRule();
				((RulesContext)_localctx).rls.add(((RulesContext)_localctx).singleRule);
				}
				}
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}

			    ((RulesContext)_localctx).primaryTokens =  ((RulesContext)_localctx).rls.stream().map(x -> x.primaryToken).filter(Objects::nonNull).collect(Collectors.toList());
			    ((RulesContext)_localctx).primaryRules =  ((RulesContext)_localctx).rls.stream().map(x -> x.primaryRule).filter(Objects::nonNull).collect(Collectors.toList());

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SingleRuleContext extends ParserRuleContext {
		public PrimaryToken primaryToken;
		public PrimaryRule primaryRule;
		public SingleParserRuleContext singleParserRule;
		public SingleLexerRuleContext singleLexerRule;
		public SingleParserRuleContext singleParserRule() {
			return getRuleContext(SingleParserRuleContext.class,0);
		}
		public SingleLexerRuleContext singleLexerRule() {
			return getRuleContext(SingleLexerRuleContext.class,0);
		}
		public SingleRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_singleRule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SyntaxListener ) ((SyntaxListener)listener).enterSingleRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SyntaxListener ) ((SyntaxListener)listener).exitSingleRule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SyntaxVisitor ) return ((SyntaxVisitor<? extends T>)visitor).visitSingleRule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SingleRuleContext singleRule() throws RecognitionException {
		SingleRuleContext _localctx = new SingleRuleContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_singleRule);
		try {
			setState(92);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case RULE_NAME:
				enterOuterAlt(_localctx, 1);
				{
				setState(86);
				((SingleRuleContext)_localctx).singleParserRule = singleParserRule();

				        ((SingleRuleContext)_localctx).primaryToken =  null;
				        ((SingleRuleContext)_localctx).primaryRule =  ((SingleRuleContext)_localctx).singleParserRule.primaryRule;
				    
				}
				break;
			case TOKEN_NAME:
				enterOuterAlt(_localctx, 2);
				{
				setState(89);
				((SingleRuleContext)_localctx).singleLexerRule = singleLexerRule();

				        ((SingleRuleContext)_localctx).primaryToken =  ((SingleRuleContext)_localctx).singleLexerRule.primaryToken;
				        ((SingleRuleContext)_localctx).primaryRule =  null;
				    
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SingleLexerRuleContext extends ParserRuleContext {
		public PrimaryToken primaryToken;
		public TerminalNode TOKEN_NAME() { return getToken(SyntaxParser.TOKEN_NAME, 0); }
		public TerminalNode COLON() { return getToken(SyntaxParser.COLON, 0); }
		public TerminalNode REGEX() { return getToken(SyntaxParser.REGEX, 0); }
		public TerminalNode SEMICOLON() { return getToken(SyntaxParser.SEMICOLON, 0); }
		public TerminalNode ARROW() { return getToken(SyntaxParser.ARROW, 0); }
		public TerminalNode SKIP_WORD() { return getToken(SyntaxParser.SKIP_WORD, 0); }
		public SingleLexerRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_singleLexerRule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SyntaxListener ) ((SyntaxListener)listener).enterSingleLexerRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SyntaxListener ) ((SyntaxListener)listener).exitSingleLexerRule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SyntaxVisitor ) return ((SyntaxVisitor<? extends T>)visitor).visitSingleLexerRule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SingleLexerRuleContext singleLexerRule() throws RecognitionException {
		SingleLexerRuleContext _localctx = new SingleLexerRuleContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_singleLexerRule);
		boolean skip = false;
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(TOKEN_NAME);
			setState(95);
			match(COLON);
			setState(96);
			match(REGEX);
			setState(100);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ARROW) {
				{
				setState(97);
				match(ARROW);
				setState(98);
				match(SKIP_WORD);
				skip = true;
				}
			}

			setState(102);
			match(SEMICOLON);

			    ((SingleLexerRuleContext)_localctx).primaryToken =  new PrimaryToken(_localctx.getChild(0).getText(), _localctx.getChild(2).getText(), skip);

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SingleParserRuleContext extends ParserRuleContext {
		public PrimaryRule primaryRule;
		public RuleArgsContext ruleArgs;
		public List<RuleArgsContext> args = new ArrayList<RuleArgsContext>();
		public RuleReturnsContext ruleReturns;
		public List<RuleReturnsContext> rets = new ArrayList<RuleReturnsContext>();
		public CodeBlockContext codeBlock;
		public List<CodeBlockContext> init = new ArrayList<CodeBlockContext>();
		public AlternativesContext alternatives;
		public TerminalNode RULE_NAME() { return getToken(SyntaxParser.RULE_NAME, 0); }
		public TerminalNode COLON() { return getToken(SyntaxParser.COLON, 0); }
		public AlternativesContext alternatives() {
			return getRuleContext(AlternativesContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(SyntaxParser.SEMICOLON, 0); }
		public RuleArgsContext ruleArgs() {
			return getRuleContext(RuleArgsContext.class,0);
		}
		public RuleReturnsContext ruleReturns() {
			return getRuleContext(RuleReturnsContext.class,0);
		}
		public CodeBlockContext codeBlock() {
			return getRuleContext(CodeBlockContext.class,0);
		}
		public SingleParserRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_singleParserRule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SyntaxListener ) ((SyntaxListener)listener).enterSingleParserRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SyntaxListener ) ((SyntaxListener)listener).exitSingleParserRule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SyntaxVisitor ) return ((SyntaxVisitor<? extends T>)visitor).visitSingleParserRule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SingleParserRuleContext singleParserRule() throws RecognitionException {
		SingleParserRuleContext _localctx = new SingleParserRuleContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_singleParserRule);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(RULE_NAME);
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==JAVA_CODE_BRACKETS) {
				{
				setState(106);
				((SingleParserRuleContext)_localctx).ruleArgs = ruleArgs();
				((SingleParserRuleContext)_localctx).args.add(((SingleParserRuleContext)_localctx).ruleArgs);
				}
			}

			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==RETURNS) {
				{
				setState(109);
				((SingleParserRuleContext)_localctx).ruleReturns = ruleReturns();
				((SingleParserRuleContext)_localctx).rets.add(((SingleParserRuleContext)_localctx).ruleReturns);
				}
			}

			setState(112);
			match(COLON);
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==JAVA_CODE_BRACES) {
				{
				setState(113);
				((SingleParserRuleContext)_localctx).codeBlock = codeBlock();
				((SingleParserRuleContext)_localctx).init.add(((SingleParserRuleContext)_localctx).codeBlock);
				}
			}

			setState(116);
			((SingleParserRuleContext)_localctx).alternatives = alternatives();
			setState(117);
			match(SEMICOLON);

			    ((SingleParserRuleContext)_localctx).primaryRule =  new PrimaryRule(
			        _localctx.getChild(0).getText(),
			        get(((SingleParserRuleContext)_localctx).args) == null ? Collections.emptyList() : get(((SingleParserRuleContext)_localctx).args).ruleArgsList,
			        get(((SingleParserRuleContext)_localctx).rets) == null ? Collections.emptyList() : get(((SingleParserRuleContext)_localctx).rets).ruleReturnsList,
			        get(((SingleParserRuleContext)_localctx).init) == null ? null : get(((SingleParserRuleContext)_localctx).init).code,
			        ((SingleParserRuleContext)_localctx).alternatives.ruleContents
			    );
